--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.0",
     "http-errors": "^1.7.1",
     "jsonschema": "^1.2.4",
+    "moment": "^2.22.2",
     "morgan": "~1.9.0",
     "randomstring": "^1.1.5",
     "request-promise-native": "^1.0.5"
