--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "config": "^2.0.1",
+    "convert-units": "^2.3.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "^1.7.1",
