--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "moment": "^2.22.2",
     "morgan": "~1.9.0",
     "randomstring": "^1.1.5",
-    "request-promise-native": "^1.0.5"
+    "request-promise-native": "^1.0.5",
+    "sequelize": "^4.41.0",
+    "sqlite3": "^4.0.3",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
